--- a/base_static/global/css/index.css
+++ b/base_static/global/css/index.css
@@ -60,7 +60,7 @@ aside {
 .menu-space ul li a {
     font-size: 15px;
     color: #fff;
-    background-color: grey;
+    background-color: rgb(114, 114, 114);
     display: flex;
     padding: 10px;
     border-radius: 5px;
@@ -74,8 +74,7 @@ aside {
 
 
 .menu-space ul li a:hover {
-    background-color: darkgray;
-    text-decoration: underline;
+    background-color: rgb(148, 147, 147);
 }
 
 /* Main */
