--- a/base_static/global/css/cadastrar.css
+++ b/base_static/global/css/cadastrar.css
@@ -7,21 +7,21 @@ body {
     padding: 0;
 }
 
-.site-header {
+.site-header1  {
     background-color: rgba(0, 86, 179, 0.5); /* Azul escuro com transparência */
     padding: 10px 0;
     color: black;
     text-align: center;
 }
 
-.site-header h1 {
+.site-header1 h1 {
     margin: 0;
     font-size: 28px;
     text-transform: uppercase;
     letter-spacing: 2px;
 }
 
-.site-header nav ul {
+.site-header1 nav ul {
     list-style: none;
     padding: 0;
     margin: 10px 0 0;
@@ -29,22 +29,22 @@ body {
     justify-content: center;
 }
 
-.site-header nav ul li {
+.site-header1 nav ul li {
     margin: 0 15px;
 }
 
-.site-header nav ul li a {
+.site-header1 nav ul li a {
     color: black;
     text-decoration: none;
     font-size: 16px;
     transition: color 0.3s ease;
 }
 
-.site-header nav ul li a:hover {
+.site-header1 nav ul li a:hover {
     color: #ffcc00; /* Amarelo para o hover */
 }
 
-.container {
+.container1 {
     max-width: 800px;
     margin: 50px auto;
     background-color: rgba(255, 255, 255, 0.9); /* Fundo branco com transparência */
@@ -60,7 +60,7 @@ h2 {
     text-align: center;
 }
 
-.form-group {
+.form-group1 {
     margin-bottom: 15px;
 }
 
@@ -91,7 +91,7 @@ select:focus {
     outline: none;
 }
 
-.custom-select {
+.custom-select1 {
     background-color: #fff;
     appearance: none;
     -webkit-appearance: none;
@@ -103,10 +103,25 @@ select:focus {
     cursor: pointer;
 }
 
-.custom-select option {
+.custom-select1 option {
     padding: 10px;
     font-size: 16px;
 }
+
+.error-messages ul,
+.error-list {
+    color: red;
+    font-size: 0.9em;
+    margin: 10px 0;
+    padding: 0;
+    list-style: none;
+}
+
+.error-messages li,
+.error-list li {
+    margin-top: 5px;
+}
+
 
 .btn-submit {
     background-color: #0056b3;
