--- a/base_static/global/css/cadastrar.css
+++ b/base_static/global/css/cadastrar.css
@@ -7,21 +7,21 @@ body {
     padding: 0;
 }
 
-.site-header1  {
+.cabeçalho {
     background-color: rgba(0, 86, 179, 0.5); /* Azul escuro com transparência */
     padding: 10px 0;
     color: black;
     text-align: center;
 }
 
-.site-header1 h1 {
+.cabeçalho h1 {
     margin: 0;
     font-size: 28px;
     text-transform: uppercase;
     letter-spacing: 2px;
 }
 
-.site-header1 nav ul {
+.cabeçalho nav ul {
     list-style: none;
     padding: 0;
     margin: 10px 0 0;
@@ -29,22 +29,22 @@ body {
     justify-content: center;
 }
 
-.site-header1 nav ul li {
+.cabeçalho nav ul li {
     margin: 0 15px;
 }
 
-.site-header1 nav ul li a {
+.cabeçalho nav ul li a {
     color: black;
     text-decoration: none;
     font-size: 16px;
     transition: color 0.3s ease;
 }
 
-.site-header1 nav ul li a:hover {
+.cabeçalho nav ul li a:hover {
     color: #ffcc00; /* Amarelo para o hover */
 }
 
-.container1 {
+.meu-container {
     max-width: 800px;
     margin: 50px auto;
     background-color: rgba(255, 255, 255, 0.9); /* Fundo branco com transparência */
@@ -55,12 +55,12 @@ body {
 
 h2 {
     font-size: 24px;
-    margin-bottom: 20px;
+    margin-top: 20px;
     color: #0056b3;
     text-align: center;
 }
 
-.form-group1 {
+.meu-form-grupo {
     margin-bottom: 15px;
 }
 
